<resources>
    <string name="app_name">Cork Tennis Club</string>
    <string name="button_addResult">Add Match Result</string>
    <string name="hint_resultScore">Result</string>
    <string name="hint_resultPlayerOne">Player 1</string>
    <string name="hint_resultPlayerTwo">Player 2</string>
    <string name="menu_addResult">Add Result</string>
    <string name="menu_cancelAddResult">Cancel</string>
    <string name="menu_results">Results</string>
    <string name="menu_members">Members</string>
    <string name="save_result">Update Result</string>
    <string name="fill_in_all_fields">Please fill in all fields</string>
    <string name="welcome_title">Welcome to Cork Tennis Club!</string>
    <string name="hint_memberFirstName">First name</string>
    <string name="hint_memberLastName">Last name</string>
    <string name="hint_dateOfBirth">D.O.B.</string>
    <string name="select_member_image">Select member image</string>
    <string name="button_addImage">Add Profile Picture</string>
    <string name="change_member_image">Change member image</string>
    <string name="welcome_subtitle">Est. 2021</string>
    <string name="hint_memberExperience">Experience</string>
    <string name="menu_contact">Contact</string>
    <string name="contact_email">corktennisclub@gmail.com</string>
    <string name="contact_phone">(+353) 086 123 4567</string>
    <string name="contact_location">Cork Tennis Club, Bishopstown, Cork</string>
    <string name="contact_title">Get in touch!</string>
    <string name="title_activity_map">Map</string>
    <string name="player_one_spinner_label">Player 1:</string>
    <string name="player_two_spinner_label">Player 2:</string>
    <string name="result_edit_text_label">Result:</string>
    <string name="P1_hint">P1</string>
    <string name="dash">-</string>
    <string name="P2_hint">P2</string>
    <string name="update_result">Update Result</string>
    <string name="edit_label">EDIT</string>
    <string name="delete_label">DELETE</string>
    <string name="update_member">Update Member</string>
    <string name="select_a_member">Select member:</string>
    <string name="add_result_players_label">Players:</string>
    <string name="add_result_score_label">Score:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hint_emailAddress">Email</string>
    <string name="menu_logout">Logout</string>
    <string name="user_does_not_exist">Incorrect email and/or password</string>
    <string name="login_successful">Login Successful!</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="nav_header_title">Cork Tennis Club</string>
    <string name="nav_header_subtitle">Your home of tennis</string>
    <string name="nav_header_desc">Menu</string>
    <string name="select_experience">Select experience:</string>
    <string name="resultsNotFound">No Results Yet...</string>
    <string name="addResultError">Error : Couldn\'t add a result...</string>
    <string name="member_edit_denied">You cannot edit another members details!</string>
    <string name="member_delete_denied">You cannot delete another member!</string>
    <string name="confirm_member_delete">Are you sure you want to delete this member?</string>
    <string name="add_result_date_label">Date:</string>
    <string name="change_date">Change date</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="menu_editResult">Edit result</string>
</resources>