<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/resultsFragment"
            android:icon="@drawable/ic_poll_h"
            android:title="@string/menu_results" />
        <item
            android:id="@+id/membersFragment"
            android:icon="@drawable/ic_users"
            android:title="@string/menu_members" />
        <item
            android:id="@+id/contactFragment"
            android:icon="@drawable/ic_phone_alt"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/signOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/sign_out"
            android:onClick="signOut"/>
    </group>
</menu>