<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddResultActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_one_spinner_label"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_vertical"
                android:textSize="18dp" />
            <Spinner
                android:id="@+id/playerOneSpinner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_two_spinner_label"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_vertical"
                android:textSize="18dp" />
            <Spinner
                android:id="@+id/playerTwoSpinner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_edit_text_label"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_vertical"
                android:textSize="18dp" />
            <EditText
                android:id="@+id/playerOneScore"
                android:layout_width="30dp"
                android:layout_height="48dp"
                android:inputType="number"
                android:hint="@string/P1_hint"
                android:layout_margin="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_vertical"
                android:textSize="18dp" />
            <EditText
                android:id="@+id/playerTwoScore"
                android:layout_width="30dp"
                android:layout_height="48dp"
                android:inputType="number"
                android:hint="@string/P2_hint"
                android:layout_margin="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorAccent"
        android:padding="8dp"
        android:stateListAnimator="@null"
        android:text="@string/button_addMatchResult"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:layout_below="@id/matchResult"
        />
</LinearLayout>