<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.addResult.AddResultFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_result_date_label"
                android:textSize="18sp"
                android:layout_margin="5dp"/>
            <TextView
                android:id="@+id/result_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_margin="5dp"/>
            <Button
                android:id="@+id/addDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/change_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_result_players_label"
                android:textSize="18dp"
                android:layout_weight="1"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_result_score_label"
                android:textSize="18dp"
                android:layout_weight="5"
                android:maxLines="1"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Spinner
                android:id="@+id/playerOneSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="18dp"/>
            <EditText
                android:id="@+id/playerOneScore"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="number"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:textAlignment="center"
                android:textSize="18dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Spinner
                android:id="@+id/playerTwoSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="18dp" />
            <EditText
                android:id="@+id/playerTwoScore"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="number"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/add_result_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorAccent"
        android:padding="8dp"
        android:stateListAnimator="@null"
        android:text="@string/button_addResult"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />
</LinearLayout>