<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/resultsFragment">

    <fragment
        android:id="@+id/resultsFragment"
        android:name="ie.wit.tennisapp.ui.results.ResultsFragment"
        android:label="@string/menu_results"
        tools:layout="@layout/fragment_results" >
        <action
            android:id="@+id/action_resultsFragment_to_membersFragment"
            app:destination="@id/membersFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_resultsFragment_to_contactFragment"
            app:destination="@id/contactFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_resultsFragment_to_addResultFragment"
            app:destination="@id/addResultFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/membersFragment"
        android:name="ie.wit.tennisapp.ui.members.MembersFragment"
        android:label="@string/menu_members"
        tools:layout="@layout/fragment_members" >
        <action
            android:id="@+id/action_membersFragment_to_resultsFragment"
            app:destination="@id/resultsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/contactFragment"
        android:name="ie.wit.tennisapp.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" >
        <action
            android:id="@+id/action_contactFragment_to_resultsFragment"
            app:destination="@id/resultsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/addResultFragment"
        android:name="ie.wit.tennisapp.ui.addResult.AddResultFragment"
        android:label="@string/add_result"
        tools:layout="@layout/fragment_add_result" >
        <action
            android:id="@+id/action_addResultFragment_to_resultsFragment"
            app:destination="@id/resultsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <argument
            android:name="result"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"/>
    </fragment>
</navigation>